--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,18 @@
-# See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
+# --- System Files ---
+.DS_Store
+*.pem
+*.tsbuildinfo
 
-# dependencies
-/node_modules
-/.pnp
+# --- General Frontend (Next.js / Node) ---
+# 先頭の / を外すことで、frontend-web 内のフォルダも対象になります
+node_modules/
+.next/
+out/
+build/
+.vercel
+next-env.d.ts
+
+# Package manager files
 .pnp.*
 .yarn/*
 !.yarn/patches
@@ -10,32 +20,36 @@
 !.yarn/releases
 !.yarn/versions
 
-# testing
-/coverage
+# --- Python (Backend) ---
+__pycache__/
+*.py[cod]
+*$py.class
+venv/
+.venv/
+env/
+.pytest_cache/
+.python-version
 
-# next.js
-/.next/
-/out/
+# --- iOS (Swift / Xcode) ---
+# ビルド生成物や個人設定を無視
+DerivedData/
+*.xcuserstate
+*.xcresult
+*.moved-aside
+*~.nib
+# CocoaPodsを使わなければ不要ですが、念のため
+Pods/
 
-# production
-/build
+# --- Environment Files ---
+# 全ての階層の .env ファイルを無視（セキュリティのため重要）
+.env
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
 
-# misc
-.DS_Store
-*.pem
-
-# debug
+# --- Debug logs ---
 npm-debug.log*
 yarn-debug.log*
 yarn-error.log*
 .pnpm-debug.log*
-
-# env files (can opt-in for committing if needed)
-.env.local
-
-# vercel
-.vercel
-
-# typescript
-*.tsbuildinfo
-next-env.d.ts
